force-app/main/default/objects/Meter_Billing__c/Meter_Billing__c.object-meta.xml
<CustomObject>
    <label>Meter Billing</label>
    <nameField>
        <label>Meter Billings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meter Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>