force-app/main/default/objects/Meter_Billing__c/fields/Base_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Charge__c</fullName>
    <label>Base Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>