force-app/main/default/objects/Meter_Billing__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meter Billings</relationshipLabel>
    <relationshipName>Meter_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>