force-app/main/default/objects/Meter_Billing__c/fields/Copy_Credits__c.field-meta.xml
<CustomField>
    <fullName>Copy_Credits__c</fullName>
    <label>Copy Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>