force-app/main/default/objects/Meter_Billing__c/fields/Counted_Copies__c.field-meta.xml
<CustomField>
    <fullName>Counted_Copies__c</fullName>
    <label>Counted Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>