force-app/main/default/objects/Meter_Billing__c/fields/Covered_Copies__c.field-meta.xml
<CustomField>
    <fullName>Covered_Copies__c</fullName>
    <label>Covered Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>