force-app/main/default/objects/Meter_Billing__c/fields/Effective_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Rate__c</fullName>
    <label>Effective Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>