force-app/main/default/objects/Meter_Billing__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>Meter Billings</relationshipLabel>
    <relationshipName>Meter_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>