force-app/main/default/objects/Meter_Billing__c/fields/Group_Copies__c.field-meta.xml
<CustomField>
    <fullName>Group_Copies__c</fullName>
    <label>Group Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>