force-app/main/default/objects/Meter_Billing__c/fields/Invoice_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_2__c</fullName>
    <formula>Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>