force-app/main/default/objects/Meter_Billing__c/fields/Meter_Sync__c.field-meta.xml
<CustomField>
    <fullName>Meter_Sync__c</fullName>
    <description>Invoice Number &amp; Contract Meter Group</description>
    <externalId>true</externalId>
    <inlineHelpText>Invoice Number &amp; Contract Meter Group</inlineHelpText>
    <label>Meter Sync</label>
    <length>80</length>
    <type>Text</type>
</CustomField>