force-app/main/default/objects/Meter_Billing__c/fields/Total_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Amount__c</fullName>
    <label>Total Charge Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>